--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port 3000",
+    "dev": "vite --host 0.0.0.0 --port 3000 --clearScreen false",
     "build": "vite build",
     "preview": "vite preview",
     "start": "serve -s dist -l tcp://0.0.0.0:3000"
@@ -15,6 +15,7 @@
     "element-plus": "^2.10.2",
     "ethers": "^6.14.3",
     "pinia": "^3.0.3",
+    "serve": "^14.2.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
